feat(upload child request): upload missing swagger docs
